@@ -326,6 +326,27 @@ that is "true","yes", or "on"</p>
   </tr>
 </table>
 
+<h4>typefound</h4>
+
+<p>Test whether a given type is defined, and that
+its implementation class can be loaded. Types include
+tasks, datatypes, scriptdefs, macrodefs and presetdefs.</p>
+
+<p>This condition has been added in Apache Ant 1.7.</p>
+
+<table border="1" cellpadding="2" cellspacing="0">
+  <tr>
+    <td valign="top"><b>Attribute</b></td>
+    <td valign="top"><b>Description</b></td>
+    <td align="center" valign="top"><b>Required</b></td>
+  </tr>
+  <tr>
+    <td valign="top">name</td>
+    <td valign="top">name of the type</td>
+    <td valign="top" align="center">Yes</td>
+  </tr>
+</table>
+
 <hr>
 <p align="center">Copyright &copy; 2001-2003 Apache Software
 Foundation. All rights Reserved.</p>
